--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 		<div class="collapse navbar-collapse">
 
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#intro" class="smoothScroll">Intro</a></li>
+				<li><a href="#intro" class="smoothScroll">Home</a></li>
 				<li><a href="#overview" class="smoothScroll">Overview</a></li>
-				<li><a href="#speakers" class="smoothScroll">Customers</a></li>
+<!--		<li><a href="#speakers" class="smoothScroll">Speakers</a></li>	-->
 				<li><a href="#program" class="smoothScroll">Our Work</a></li>
 				<li><a href="#register" class="smoothScroll">Register</a></li>
 				<li><a href="#venue" class="smoothScroll">Venue</a></li>
-				<li><a href="#contact" class="smoothScroll">Contact</a></li>
+<!--		<li><a href="#contact" class="smoothScroll">Contact</a></li>	-->
 			</ul>
 
 		</div>
@@ -67,18 +67,15 @@
 	</div>
 </div>
 
-
-<!-- =========================
-    INTRO SECTION
-============================== -->
 <section id="intro" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<h3 class="wow fadeInUp" data-wow-delay="1.6s">Clean Air Technologies</h3>
-				<h1 class="wow bounceIn" data-wow-delay="0.9s">Since 2013</h1>
-				<h1 class="wow bounceIn" data-wow-delay="0.9s">BELIEVE SHARE SPREAD</h1>
+				<h1 class="wow fadeInUp" data-wow-delay="0.9s">FOSS Talks</h1>
+				&nbsp;
+				&nbsp;
+				<h2 class="wow fadeInUp" data-wow-delay="1.6s">Join | Learn | Speak</h3>
 			</div>
 
 
@@ -125,6 +122,9 @@
 
 			<!-- Testimonial Owl Carousel section
 			================================================== -->
+
+			<!--
+
 			<div id="owl-speakers" class="owl-carousel">
 
 				<div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
@@ -173,10 +173,13 @@
 	</div>
 </section>
 
+-->
 
 <!-- =========================
     PROGRAM SECTION
 ============================== -->
+
+<!--
 <section id="program" class="parallax-section">
 	<div class="container">
 		<div class="row">
@@ -189,15 +192,12 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-10 col-sm-10" data-wow-delay="0.9s">
-				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
 
 				</ul>
-				<!-- tab panes -->
 				<div class="tab-content">
 
 					<div role="tabpanel" class="tab-pane active" id="fday">
-						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
 							<img src="images/p1.jpeg" class="img-responsive" alt="program">
 						</div>
@@ -210,11 +210,8 @@
 
 							<p>Comprises a team of 10-12,headed by a supervisor.</p>
 						</div>
+				<div class="program-divider col-md-12 col-sm-12"></div>
 
-						<!-- program divider -->
-						<div class="program-divider col-md-12 col-sm-12"></div>
-
-						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
 							<img src="images/p2.jpeg" class="img-responsive" alt="program">
 						</div>
@@ -228,10 +225,7 @@
 				<p>Has a team of 14 persons, headed by a supervisor and two assistant supervisors.</p>
 						</div>
 
-						<!-- program divider -->
 						<div class="program-divider col-md-12 col-sm-12"></div>
-
-						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
 							<img src="images/p3.jpg" class="img-responsive" alt="program">
 						</div>
@@ -247,13 +241,7 @@
 					</div>
 
 					<div role="tabpanel" class="tab-pane" id="sday">
-						<!-- program speaker here -->
 
-						<!-- program divider -->
-
-						<!-- program speaker here -->
-
-						<!-- program speaker here -->
 						<div class="col-md-2 col-sm-2">
 							<img src="images/program-img9.jpg" class="img-responsive" alt="program">
 						</div>
@@ -273,10 +261,7 @@
 		</div>
 	</div>
 </section>
-
-
-
-
+-->
 
 <!-- =========================
    REGISTER SECTION
@@ -288,18 +273,6 @@
 			<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="0.6s">
 				<h2>Register Here</h2>
 
-			</div>
-
-			<div class="wow fadeInUp col-md-5 col-sm-5" data-wow-delay="1s">
-				<form action="#" method="post">
-					<input name="firstname" type="text" class="form-control" id="firstname" placeholder="First Name">
-					<input name="lastname" type="text" class="form-control" id="lastname" placeholder="Last Name">
-					<input name="phone" type="telephone" class="form-control" id="phone" placeholder="Phone Number">
-					<input name="email" type="email" class="form-control" id="email" placeholder="Email Address">
-					<div class="col-md-offset-6 col-md-6 col-sm-offset-1 col-sm-10">
-						<input name="submit" type="submit" class="form-control" id="submit" value="REGISTER">
-					</div>
-				</form>
 			</div>
 
 			<div class="col-md-1"></div>
@@ -325,48 +298,19 @@
 <section id="venue" class="parallax-section">
 	<div class="container">
 		<div class="row">
-
 			<div class="wow fadeInLeft col-md-offset-1 col-md-5 col-sm-8" data-wow-delay="0.9s">
+				<h4>Amrita School of Engineering,</h4>
 				<h2>Venue</h2>
-				<p>At present we have our service at A.P and T.S We also take up any works which are outside the mentioned areas sometime. </p>
-				<h4>Our office Address:</h4>
-  				<h4>Clean Air Technologies</h4>
-  				<h4>Miyapur</h4>
-				<h4>500011</h4>
+  				<h4>Amritapuri, Kollam,</h4>
+					<h4>Kerala - 690525,</h4>
+					<h4>India</h4>
 			</div>
-
 		</div>
 	</div>
 </section>
-
-    CONTACT SECTION
-============================== -->
-<section id="contact" class="parallax-section">
-	<div class="container">
-		<div class="row">
-
-
-
-			<div class="wow fadeInUp col-md-5 col-sm-6" data-wow-delay="0.9s">
-				<div class="contact_detail">
-					<div class="section-title">
-						<h2>Any review can be given here</h2>
-					</div>
-					<form action="#" method="post">
-						<input name="name" type="text" class="form-control" id="name" placeholder="Name">
-					  	<input name="email" type="email" class="form-control" id="email" placeholder="Email">
-					  	<textarea name="message" rows="5" class="form-control" id="message" placeholder="Message"></textarea>
-						<div class="col-md-6 col-sm-10">
-							<input name="submit" type="submit" class="form-control" id="submit" value="SEND">
-						</div>
-					</form>
-				</div>
-			</div>
-
-		</div>
-	</div>
-</section>
-
+&nbsp;
+&nbsp;
+&nbsp;
 
 <!-- =========================
     FOOTER SECTION
@@ -376,24 +320,25 @@
 		<div class="row">
 
 			<div class="col-md-12 col-sm-12">
-				<p class="wow fadeInUp" data-wow-delay="0.6s">Copyright &copy; 2016 Your Company
-
-                    | Design: <a rel="nofollow" href="http://www.templatemo.com/page/1" target="_parent">Templatemo</a></p>
-
+				<p class="wow fadeInUp" data-wow-delay="0.6s">Copyright &copy; 2018 FOSS@Amrita
+                    | Designed by: <a rel="nofollow" href="https://amfoss.in/" target="_parent">FOSS@Amrita</a></p>
+&nbsp;
+				<p class="wow fadeInUp" data-wow-delay="0.6s">Email us at <strong>amritapurifoss@gmail.com</strong></p>
+&nbsp;
 				<ul class="social-icon">
-					<li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
-					<li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
-					<li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1.6s"></a></li>
-					<li><a href="#" class="fa fa-behance wow fadeInUp" data-wow-delay="1.9s"></a></li>
-					<li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="2s"></a></li>
+					<li><a href="https://www.facebook.com/amfoss.in/" class="fa fa-facebook wow fadeInUp" data-wow-delay="1s"></a></li>
+					<li><a href="https://twitter.com/amfoss_in" class="fa fa-twitter wow fadeInUp" data-wow-delay="1.3s"></a></li>
+					<li><a href="https://github.com/amfoss" class="fa fa-github wow fadeInUp" data-wow-delay="1.9s"></a></li>
+					<li><a href="https://plus.google.com/116337049508742373084" class="fa fa-google-plus wow fadeInUp" data-wow-delay="2s"></a></li>
+					<li><a href="https://www.instagram.com/amfoss_/" class="fa fa-instagram wow fadeInUp" data-wow-delay="2s"></a></li>
 				</ul>
-
 			</div>
-
 		</div>
 	</div>
 </footer>
 
+&nbsp;
+&nbsp;
 
 <!-- Back top -->
 <a href="#back-top" class="go-top"><i class="fa fa-angle-up"></i></a>
