refactored venue/reg/home

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<a href="#" class="navbar-brand">FOSS Talks</a>
+			<a href="#" class="navbar-brand">FOSS@Amrita</a>
 		</div>
 
 		<div class="collapse navbar-collapse">
@@ -56,7 +56,7 @@
 				<li><a href="#intro" class="smoothScroll">Home</a></li>
 				<li><a href="#overview" class="smoothScroll">Overview</a></li>
 <!--		<li><a href="#speakers" class="smoothScroll">Speakers</a></li>	-->
-				<li><a href="#program" class="smoothScroll">Our Work</a></li>
+<!--		<li><a href="#program" class="smoothScroll">Our Work</a></li>		-->
 				<li><a href="#register" class="smoothScroll">Register</a></li>
 				<li><a href="#venue" class="smoothScroll">Venue</a></li>
 <!--		<li><a href="#contact" class="smoothScroll">Contact</a></li>	-->
@@ -92,14 +92,16 @@
 		<div class="row">
 
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.6s">
-				<h3>What we do?</h3>
+				<h2>What's it all about?</h2>
+				&nbsp;
+				&nbsp;
+				&nbsp;
 				<p>We work as a team and provide our services for Pharma companies.We work and implement our ideas and provide the customers with the best service.</p>
 				<p>We work for the satisfaction of the customers.</p>
 				<p>We have our services at.</p>
 				<p>All units of Dr.Reddy's.</p>
 				<p>Sri Krishna Pharmaceuticals Limited.</p>
 				<p>Synthokem Labs.</p>
-
 			</div>
 
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
@@ -114,12 +116,13 @@
 	<div class="container">
 		<div class="row">
 
+<!--
 			<div class="col-md-12 col-sm-12 wow bounceIn">
 				<div class="section-title">
 					<h2>Our Customers</h2>
 				</div>
 			</div>
-
+-->
 			<!-- Testimonial Owl Carousel section
 			================================================== -->
 
@@ -270,8 +273,13 @@
 	<div class="container">
 		<div class="row">
 
-			<div class="wow fadeInUp col-md-7 col-sm-7" data-wow-delay="0.6s">
-				<h2>Register Here</h2>
+			<div class="wow fadeInUp col-md-14" data-wow-delay="0.6s">
+				<h2>Register Now</h2>
+				&nbsp;
+				&nbsp;
+
+				<p><h4 class="col-sm-6"><a href="">Speakers</a></h4></p>
+				<h4 class="col-sm-6"><a href="">Students</a></h4>
 
 			</div>
 
@@ -293,16 +301,16 @@
 			================================================== -->
 
 <!-- =========================
-    VENUE SECTION
+    VENUE SECTION																																					col-md-offset-1 col-md-5 col-sm-8
 ============================== -->
 <section id="venue" class="parallax-section">
 	<div class="container">
 		<div class="row">
-			<div class="wow fadeInLeft col-md-offset-1 col-md-5 col-sm-8" data-wow-delay="0.9s">
-				<h4>Amrita School of Engineering,</h4>
+			<div class="wow fadeInLeft col-md-12" data-wow-delay="0.9s">
 				<h2>Venue</h2>
-  				<h4>Amritapuri, Kollam,</h4>
-					<h4>Kerala - 690525,</h4>
+				<h4>Amrita School of Engineering</h4>
+  				<h4>Amritapuri, Kollam</h4>
+					<h4>Kerala - 690525</h4>
 					<h4>India</h4>
 			</div>
 		</div>
