--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 				&nbsp;
 				&nbsp;
 				&nbsp;
-				<p>We work as a team and provide our services for Pharma companies.We work and implement our ideas and provide the customers with the best service.</p>
+				<p>Creating a platform to bridge the gap between enthusiast learners
+					wishing to learn and explore in finding their interests and professionals
+					willing to share their knowledge and methods of learning from their
+					experiences.</p>
 				<p>We work for the satisfaction of the customers.</p>
 				<p>We have our services at.</p>
 				<p>All units of Dr.Reddy's.</p>
@@ -105,7 +108,7 @@
 			</div>
 
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
-				<img src="images/overview.jpeg" class="img-responsive" alt="Overview">
+				<img src="images/mic4.jpg" class="img-responsive" alt="Overview">
 			</div>
 
 		</div>
@@ -301,17 +304,17 @@
 			================================================== -->
 
 <!-- =========================
-    VENUE SECTION																																					col-md-offset-1 col-md-5 col-sm-8
+    VENUE SECTION
 ============================== -->
 <section id="venue" class="parallax-section">
 	<div class="container">
 		<div class="row">
 			<div class="wow fadeInLeft col-md-12" data-wow-delay="0.9s">
-				<h2>Venue</h2>
-				<h4>Amrita School of Engineering</h4>
-  				<h4>Amritapuri, Kollam</h4>
-					<h4>Kerala - 690525</h4>
-					<h4>India</h4>
+				<h2><strong>Venue</h2>
+				<h4><strong>Amrita School of Engineering</strong></h4>
+  				<h4><strong>Amritapuri, Kollam</strong></h4>
+					<h4><strong>Kerala - 690525</strong></h4>
+					<h4><strong>India</h4></strong>
 			</div>
 		</div>
 	</div>
