completed primary layout

--- a/index.html
+++ b/index.html
@@ -96,17 +96,12 @@
 				&nbsp;
 				&nbsp;
 				&nbsp;
-				<p>Creating a platform to bridge the gap between enthusiast learners
-					wishing to learn and explore in finding their interests and professionals
-					willing to share their knowledge and methods of learning from their
-					experiences.</p>
-				<p>We work for the satisfaction of the customers.</p>
-				<p>We have our services at.</p>
-				<p>All units of Dr.Reddy's.</p>
-				<p>Sri Krishna Pharmaceuticals Limited.</p>
-				<p>Synthokem Labs.</p>
+				<h4 class="col-md-7">Professional in any field and wish
+				to give back to the society? Don't wait, join us and be one of the
+				speakers at FOSS talks.</h4>
+				<h4 class="col-md-7">Confused in your Open Source journey and don't have
+				an idea where to begin? Then, roll up your sleeves and register as a student.</h4>
 			</div>
-
 			<div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
 				<img src="images/mic4.jpg" class="img-responsive" alt="Overview">
 			</div>
@@ -279,11 +274,17 @@
 			<div class="wow fadeInUp col-md-14" data-wow-delay="0.6s">
 				<h2>Register Now</h2>
 				&nbsp;
+				<p>Creating a platform to bridge the gap between enthusiast learners
+					wishing to learn and explore in finding their interests and professionals
+					willing to share their knowledge and methods of learning from their
+					experiences.</p>
 				&nbsp;
-
-				<p><h4 class="col-sm-6"><a href="">Speakers</a></h4></p>
-				<h4 class="col-sm-6"><a href="">Students</a></h4>
-
+				<p><h4 class="col-sm-6"><a href=
+					"https://docs.google.com/forms/d/e/1FAIpQLSdUsE9AA8VPzGteppcQssuSOi246spYcOgXwjC_bW4zB2Gq1Q/viewform">
+					Speaker</a></h4></p>
+				<h4 class="col-sm-6"><a href=
+					"https://docs.google.com/forms/d/e/1FAIpQLSee965hGN6erLKl4UvgAapkjcmmYBSQCZTkQA5DrE8IkcHCIQ/viewform">
+					Student</a></h4>
 			</div>
 
 			<div class="col-md-1"></div>
