fixed grammar issue

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				&nbsp;
 				&nbsp;
 				&nbsp;
-				<h4 class="col-md-7">Professional in any field and wish
+				<h4 class="col-md-7">Are you a professional in any field and wish
 				to give back to the society? Don't wait, join us and be one of the
 				speakers at FOSS talks.</h4>
 				<h4 class="col-md-7">Confused in your Open Source journey and don't have
